[package]
name = "max2034x"
version = "0.1.3"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "Driver crate for the MAX20343/MAX20344 family of buck/boost converters."
readme = "README.md"
repository = "https://github.com/tweedegolf/max2034x"

license = "MIT OR Apache-2.0"
keywords = ["MAX20343", "MAX20344", "embedded", "buck-boost", "driver"]
categories = ["embedded", "no-std"]
exclude = ["Cargo.lock", ".gitignore"]

[dependencies]
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.2.0-alpha.0"
device-driver = { version = "0.4.1", features = ["async"] }
num_enum = { version = "0.5.1", default_features = false }
defmt = { version = "0.3.2", optional = true }

[features]
defmt = ["dep:defmt"]

[badges]
maintenance = { status = "passively-maintained" }
